--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "Senwell",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "type" : "module",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
+    "nodemon": "^3.0.1"
   }
 }
